plugins {
    id "java"
}

group "de.tum.in.www1.artemis"
version "1.0.1"
description = "A small tool that proposes the best number of salting rounds for a specific hardware configuration"

sourceCompatibility=21
targetCompatibility=21

repositories {
    mavenCentral()
}

dependencies {
    implementation "org.springframework.boot:spring-boot-starter-security:${spring_boot_version}"
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    manifest {
        attributes(
                'Main-Class': 'de.tum.in.www1.artemis.Benchmark',
        )
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}
